--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.14.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "styled-components": "^1.2.1"
   }
 }
