--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "type": "node2",
             "request": "launch",
             "name": "Launch Program",
             // "program": "${workspaceRoot}\\server\\index.js",
@@ -15,7 +15,7 @@
                 "runtimeExecutable": "npm.cmd"
             },
             "runtimeArgs": [
-                "run-script", "alt"
+                "run-script", "serve"
             ]
         },
         {
