--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "body-parser": "^1.15.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.16.1",
     "express": "^4.14.0",
     "express-stormpath": "^3.2.0",
     "lodash": "^4.17.4",
+    "mongoose": "^4.8.5",
+    "mongoose-class-wrapper": "^0.8.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
