--- a/package.json
+++ b/package.json
@@ -27,20 +27,25 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.16.1",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-stormpath": "^3.2.0",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.5",
     "mongoose-class-wrapper": "^0.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.0.0-rc.3",
     "redux-thunk": "^2.1.0",
     "styled-components": "^1.2.1",
     "validator": "^6.2.1"
