--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.26.1",
     "node-sass": "^4.1.1",
     "nodemon": "^1.11.0",
+    "react-anime": "^0.3.4",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
@@ -40,6 +41,7 @@
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
+    "react-anime": "^0.3.4",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.3",
