--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-stormpath": "^3.2.0",
+    "file-loader": "^0.11.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.5",
@@ -40,10 +41,11 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.3.0",
     "react-anime": "^0.3.4",
     "react-cookie": "^1.0.4",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.3.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-simple-dropdown": "^1.1.5",
