--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.3.0",
     "react-anime": "^0.3.4",
+    "react-awesome-modal": "^2.0.1",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.3.0",
     "react-redux": "^5.0.3",
